codegen/tests/fail/delegate/not_allowed_macro_in_trait_definition.rs
use delegation::delegate;

#[delegate]
trait Channel {
    unreachable!();
}

fn main() {}
